errorMsgs.txt
Emily Ortiz@ero-laptop MINGW64 ~/apcs/12_bigsib (main)
$ javac BigSib.java
BigSib.java:9: error: non-static variable HelloMsg cannot be referenced from a static context
    HelloMsg = message;
    ^
    
2021.10.06
Emily Ortiz@ero-laptop MINGW64 ~/apcs/12_BigSIb (main)
$ javac Greet.java
.\BigSib.java:7: error: non-static variable HelloMsg cannot be referenced from a static context
    HelloMsg = message;
    ^
1 error

Emily Ortiz@ero-laptop MINGW64 ~/apcs/12_BigSIb (main)
$ javac Greet.java
.\BigSib.java:11: error: cannot find symbol
                return(HelloMsg + "" + name);
                       ^
  symbol:   variable HelloMsg
  location: class BigSib
1 error

Don't know how to use this when it comes up in GitBash:

# Please enter the commit message for your changes. Lines starting
# with '#' will be ignored, and an empty message aborts the commit.
#
# On branch main
# Your branch is up to date with 'origin/main'.
#
# Changes to be committed:
#       modified:   BigSib.java
#       modified:   Greet.java
#
# Untracked files:
#       BigSib_Copy.java
#
~
~
~
~
~
~




